--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,71 @@
-.context{
+.fluid{
     background-image: url(../images/pizza1.jpg);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 90px;
+    height: 100%;
+    width: 100%;
 }
 h1 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
+    color: purple;
+    font-size: 78px;
 }
 p {
     text-align: center;
+    
 }
+.flow{
+    background-color: rgb(218, 172, 172);
+}
+.figure-caption{
+    font-size: 78px;
+    text-align: center;
+    color:white;
+    margin-top: 20px;
+    text-
+}
+.description{
+  bottom: 100;
+  background: rgb(0, 0, 0.3); 
+  background: rgba(0, 0, 0, 0.3); 
+  color: #f1f1f1;
+  width: 100%;
+}
+h2{
+    text-align: center;
+    font-weight: bolder;
+    color:#1b0000;
+    font-size:45px;
+}
+.variety{
+    max-width: 600px;
+    
+}
+.small{
+    width:100%;
+}
+.medium{
+    width:100%;
+}
+.large{
+    width:100%;
+}
+.row {
+    width:100px;
+    
+
+}
+body{
+    padding :o;
+}
+.h3{
+    text-align: center;
+    font-weight: bolder;
+}
+.col-6{
+    float: left;
+}
+.info {
+    text-align: center;
+}
+
