--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 .fluid{
-    background-image: url(../images/pizza1.jpg);
+    background-image: url(../images/pizza-1.jpg);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100%;
+    height: 700px;
     width: 100%;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 h1 {
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
-    color: purple;
+    color: f1f1f1;
     font-size: 78px;
 }
 p {
@@ -15,30 +17,50 @@ p {
     
 }
 .flow{
-    background-color: rgb(218, 172, 172);
+    background-color:#f9683a; 
 }
 .figure-caption{
     font-size: 78px;
     text-align: center;
     color:white;
-    margin-top: 20px;
-    text-
-}
-.description{
-  bottom: 100;
+    margin-top: 60px;
+    bottom: 100;
   background: rgb(0, 0, 0.3); 
   background: rgba(0, 0, 0, 0.3); 
+  color: #f1f1f1;
+  width: 100%;
+  height:100%;
+  padding-top: 145px;
+}
+.navigation{
+    width: 700px;
+    text-align: left;
+    font-weight: 900;
+}
+.navigation li{
+    text-decoration: none;
+    width:130px;
+    float:left;
+    list-style: none;
+}
+.description{
+  bottom: 150px;
+  background: #000; 
   color: #f1f1f1;
   width: 100%;
 }
 h2{
     text-align: center;
     font-weight: bolder;
-    color:#1b0000;
+    color:#fff:
     font-size:45px;
 }
 .variety{
     max-width: 600px;
+    
+}
+.aboutUs{
+    background-color: white;
     
 }
 .small{
@@ -68,4 +90,32 @@ body{
 .info {
     text-align: center;
 }
-
+.header {
+    padding: 10px 16px;
+    background: #870000;
+    color: #fff;
+    position: fixed;
+    width: 100%;
+    top: 0px;
+    z-index: 99;
+  }
+  .header li a{
+      color: #fff;
+  }
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%
+  }
+  .sticky + .content {
+    padding-top: 102px;
+  }
+  .aboutUs .description{
+      height: 650px;
+      padding: 215px;
+  }
+  
