--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .fluid{
     background-image: url(../images/pizza-1.jpg);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 700px;
+    height: 630px;
     width: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -72,13 +72,12 @@ h2{
 .large{
     width:100%;
 }
-.row {
-    width:100px;
-    
 
-}
 body{
-    padding :o;
+    padding :0px;
+}
+h2{
+    width:100%;
 }
 .h3{
     text-align: center;
@@ -86,6 +85,7 @@ body{
 }
 .col-6{
     float: left;
+    margin: 0 auto;
 }
 .info {
     text-align: center;
@@ -118,4 +118,88 @@ body{
       height: 650px;
       padding: 215px;
   }
+  .icns img{
+    width:100%;
+    margin-bottom: 5px;
+  }
+  .image-frame {
+	float: left;
+	position: relative;
+	margin: 5px;
+  color: #333;
+  width:23%;
+}
+.menu-container{
+    max-width:960px;
+    margin:0 auto;
+    width: 960px;
+    display:block;
+}
+
+.menu-container .menu-item{
+    display: block;
+    width:45%;
+    margin: 10px;
+    float:left;
+    height: 360px;
+
+}
+.menu-container .menu-item span{
+    width:100%;
+    text-align: center;
+    font-weight: bold;
+}
+.menu-container .menu-item img{
+    width:100%;
+    height: 300px;
+}
+
+.image-caption {
+	display: none;
+	opacity: 0.8;
+	background:#cae5c1;
+	width: 100%;
+	    bottom: 0px;
+	padding: 5px;
+}
+
+
+/* modal css */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
   
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
