--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ body{
 h2{
     width:100%;
 }
-.h3{
+h3{
     text-align: center;
     font-weight: bolder;
 }
@@ -201,4 +201,10 @@ h2{
     color: #000;
     text-decoration: none;
     cursor: pointer;
+  }
+  .row{
+      margin: 10px;
+  }
+  .header .navigation{
+      im
   }
